// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LeagueTableWidget DOM rendering renders correctly after switching to mobile mode 1`] = `
<div>
  <table
    className="KambiWidget-card-background-color general"
  >
    <thead>
      <tr
        className="KambiWidget-card-header-border KambiWidget-secondary-header KambiWidget-card-support-text-color general"
      >
        <th
          className="title"
          colSpan="2"
        >
          League Table
        </th>
        <th
          className="column-name"
          title="Translated: \\"Games Played\\""
        >
          P
        </th>
        <th
          className="column-name"
          title="Translated: \\"Wins\\""
        >
          W
        </th>
        <th
          className="column-name"
          title="Translated: \\"Draws\\""
        >
          D
        </th>
        <th
          className="column-name"
          title="Translated: \\"Losses\\""
        >
          L
        </th>
        <th
          className="column-name"
          title="Translated: \\"Goals for\\""
        >
          Gf
        </th>
        <th
          className="column-name"
          title="Translated: \\"Goals against\\""
        >
          Ga
        </th>
        <th
          className="column-name"
          title="Translated: \\"Difference\\""
        >
          +/-
        </th>
        <th
          className="column-name"
          title="Translated: \\"Points\\""
        >
          Pts
        </th>
        <th
          className="margin"
        />
      </tr>
    </thead>
    <tbody />
  </table>
</div>
`;

exports[`LeagueTableWidget DOM rendering renders correctly after switching to mobile mode 2`] = `
<div>
  <table
    className="KambiWidget-card-background-color general"
  >
    <thead>
      <tr
        className="KambiWidget-card-header-border KambiWidget-secondary-header KambiWidget-card-support-text-color mobile-row"
      >
        <th
          className="title"
          colSpan="2"
        >
          League Table
        </th>
        <th
          className="column-picker"
          colSpan={6}
        />
        <th
          className="margin"
        />
      </tr>
      <tr
        className="KambiWidget-card-header-border KambiWidget-secondary-header KambiWidget-card-support-text-color general"
      >
        <th
          className="title"
          colSpan="2"
        >
          
        </th>
        <th
          className="column-name"
          title="Translated: \\"Games Played\\""
        >
          P
        </th>
        <th
          className="column-name"
          title="Translated: \\"Wins\\""
        >
          W
        </th>
        <th
          className="column-name"
          title="Translated: \\"Draws\\""
        >
          D
        </th>
        <th
          className="column-name"
          title="Translated: \\"Losses\\""
        >
          L
        </th>
        <th
          className="column-name"
          title="Translated: \\"Difference\\""
        >
          +/-
        </th>
        <th
          className="column-name"
          title="Translated: \\"Points\\""
        >
          Pts
        </th>
        <th
          className="margin"
        />
      </tr>
    </thead>
    <tbody />
  </table>
</div>
`;

exports[`LeagueTableWidget DOM rendering renders correctly in mobile mode 1`] = `
<div>
  <Table>
    <TableHeadDesktop
      columns={
        Array [
          Object {
            "className": "games-played",
            "key": "gamesPlayed",
            "name": "Games Played",
            "short": "P",
          },
          Object {
            "className": "wins",
            "key": "wins",
            "name": "Wins",
            "short": "W",
          },
          Object {
            "className": "draws",
            "key": "draws",
            "name": "Draws",
            "short": "D",
          },
          Object {
            "className": "losses",
            "key": "losses",
            "name": "Losses",
            "short": "L",
          },
          Object {
            "className": "goals-difference",
            "key": "goalsDifference",
            "name": "Difference",
            "short": "+/-",
          },
          Object {
            "className": "points",
            "key": "points",
            "name": "Points",
            "short": "Pts",
          },
          Object {
            "className": "outcome",
            "key": "",
            "name": "Test BetOffer 1",
            "short": "Test BetOffer 1",
          },
          Object {
            "className": "outcome",
            "key": "",
            "name": "Test BetOffer 2",
            "short": "Test BetOffer 2",
          },
        ]
      }
      title="League Table"
    />
    <TableBody>
      <TableBodyPositionCell>
        <PositionIndicator
          change={0}
          color="transparent"
          position={1}
        />
      </TableBodyPositionCell>
      <TableBodyParticipantCell
        name="FC Pęzino"
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "games-played",
            "key": "gamesPlayed",
            "name": "Games Played",
            "short": "P",
          }
        }
        value={1}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "wins",
            "key": "wins",
            "name": "Wins",
            "short": "W",
          }
        }
        value={1}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "draws",
            "key": "draws",
            "name": "Draws",
            "short": "D",
          }
        }
        value={1}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "losses",
            "key": "losses",
            "name": "Losses",
            "short": "L",
          }
        }
        value={1}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "goals-difference",
            "key": "goalsDifference",
            "name": "Difference",
            "short": "+/-",
          }
        }
        value={1}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "points",
            "key": "points",
            "name": "Points",
            "short": "Pts",
          }
        }
        value={1}
      />
      <TableBodyOutcomeCell>
        <OutcomeButton
          label={false}
          outcome={
            Object {
              "betOfferId": 101,
              "id": 1,
              "odds": 1001,
              "oddsAmerican": "1.1",
              "oddsFractional": "1.1",
            }
          }
        />
      </TableBodyOutcomeCell>
      <TableBodyOutcomeCell>
        <OutcomeButton
          label={false}
          outcome={
            Object {
              "betOfferId": 102,
              "id": 2,
              "odds": 1002,
              "oddsAmerican": "1.2",
              "oddsFractional": "1.2",
            }
          }
        />
      </TableBodyOutcomeCell>
      <TableBodyPositionCell>
        <PositionIndicator
          change={0}
          color="transparent"
          position={2}
        />
      </TableBodyPositionCell>
      <TableBodyParticipantCell
        name="Błękitni Stargard"
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "games-played",
            "key": "gamesPlayed",
            "name": "Games Played",
            "short": "P",
          }
        }
        value={2}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "wins",
            "key": "wins",
            "name": "Wins",
            "short": "W",
          }
        }
        value={2}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "draws",
            "key": "draws",
            "name": "Draws",
            "short": "D",
          }
        }
        value={2}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "losses",
            "key": "losses",
            "name": "Losses",
            "short": "L",
          }
        }
        value={2}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "goals-difference",
            "key": "goalsDifference",
            "name": "Difference",
            "short": "+/-",
          }
        }
        value={2}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "points",
            "key": "points",
            "name": "Points",
            "short": "Pts",
          }
        }
        value={2}
      />
      <TableBodyOutcomeCell />
      <TableBodyOutcomeCell>
        <OutcomeButton
          label={false}
          outcome={
            Object {
              "betOfferId": 104,
              "id": 4,
              "odds": 1004,
              "oddsAmerican": "1.4",
              "oddsFractional": "1.4",
            }
          }
        />
      </TableBodyOutcomeCell>
    </TableBody>
  </Table>
</div>
`;

exports[`LeagueTableWidget DOM rendering renders correctly with bet offers 1`] = `
<div>
  <Table>
    <TableHeadDesktop
      columns={
        Array [
          Object {
            "className": "games-played",
            "key": "gamesPlayed",
            "name": "Games Played",
            "short": "P",
          },
          Object {
            "className": "wins",
            "key": "wins",
            "name": "Wins",
            "short": "W",
          },
          Object {
            "className": "draws",
            "key": "draws",
            "name": "Draws",
            "short": "D",
          },
          Object {
            "className": "losses",
            "key": "losses",
            "name": "Losses",
            "short": "L",
          },
          Object {
            "className": "goals-for",
            "key": "goalsFor",
            "name": "Goals for",
            "short": "Gf",
          },
          Object {
            "className": "goals-against",
            "key": "goalsAgainst",
            "name": "Goals against",
            "short": "Ga",
          },
          Object {
            "className": "goals-difference",
            "key": "goalsDifference",
            "name": "Difference",
            "short": "+/-",
          },
          Object {
            "className": "points",
            "key": "points",
            "name": "Points",
            "short": "Pts",
          },
          Object {
            "className": "outcome",
            "key": "",
            "name": "Test BetOffer 1",
            "short": "Test BetOffer 1",
          },
          Object {
            "className": "outcome",
            "key": "",
            "name": "Test BetOffer 2",
            "short": "Test BetOffer 2",
          },
        ]
      }
      title="League Table"
    />
    <TableBody>
      <TableBodyPositionCell>
        <PositionIndicator
          change={0}
          color="transparent"
          position={1}
        />
      </TableBodyPositionCell>
      <TableBodyParticipantCell
        name="FC Pęzino"
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "games-played",
            "key": "gamesPlayed",
            "name": "Games Played",
            "short": "P",
          }
        }
        value={1}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "wins",
            "key": "wins",
            "name": "Wins",
            "short": "W",
          }
        }
        value={1}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "draws",
            "key": "draws",
            "name": "Draws",
            "short": "D",
          }
        }
        value={1}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "losses",
            "key": "losses",
            "name": "Losses",
            "short": "L",
          }
        }
        value={1}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "goals-for",
            "key": "goalsFor",
            "name": "Goals for",
            "short": "Gf",
          }
        }
        value={1}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "goals-against",
            "key": "goalsAgainst",
            "name": "Goals against",
            "short": "Ga",
          }
        }
        value={1}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "goals-difference",
            "key": "goalsDifference",
            "name": "Difference",
            "short": "+/-",
          }
        }
        value={1}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "points",
            "key": "points",
            "name": "Points",
            "short": "Pts",
          }
        }
        value={1}
      />
      <TableBodyOutcomeCell>
        <OutcomeButton
          label={false}
          outcome={
            Object {
              "betOfferId": 101,
              "id": 1,
              "odds": 1001,
              "oddsAmerican": "1.1",
              "oddsFractional": "1.1",
            }
          }
        />
      </TableBodyOutcomeCell>
      <TableBodyOutcomeCell>
        <OutcomeButton
          label={false}
          outcome={
            Object {
              "betOfferId": 102,
              "id": 2,
              "odds": 1002,
              "oddsAmerican": "1.2",
              "oddsFractional": "1.2",
            }
          }
        />
      </TableBodyOutcomeCell>
      <TableBodyPositionCell>
        <PositionIndicator
          change={0}
          color="transparent"
          position={2}
        />
      </TableBodyPositionCell>
      <TableBodyParticipantCell
        name="Błękitni Stargard"
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "games-played",
            "key": "gamesPlayed",
            "name": "Games Played",
            "short": "P",
          }
        }
        value={2}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "wins",
            "key": "wins",
            "name": "Wins",
            "short": "W",
          }
        }
        value={2}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "draws",
            "key": "draws",
            "name": "Draws",
            "short": "D",
          }
        }
        value={2}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "losses",
            "key": "losses",
            "name": "Losses",
            "short": "L",
          }
        }
        value={2}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "goals-for",
            "key": "goalsFor",
            "name": "Goals for",
            "short": "Gf",
          }
        }
        value={2}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "goals-against",
            "key": "goalsAgainst",
            "name": "Goals against",
            "short": "Ga",
          }
        }
        value={2}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "goals-difference",
            "key": "goalsDifference",
            "name": "Difference",
            "short": "+/-",
          }
        }
        value={2}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "points",
            "key": "points",
            "name": "Points",
            "short": "Pts",
          }
        }
        value={2}
      />
      <TableBodyOutcomeCell />
      <TableBodyOutcomeCell>
        <OutcomeButton
          label={false}
          outcome={
            Object {
              "betOfferId": 104,
              "id": 4,
              "odds": 1004,
              "oddsAmerican": "1.4",
              "oddsFractional": "1.4",
            }
          }
        />
      </TableBodyOutcomeCell>
    </TableBody>
  </Table>
</div>
`;

exports[`LeagueTableWidget DOM rendering renders correctly with custom position color matcher 1`] = `
<div>
  <Table>
    <TableHeadDesktop
      columns={
        Array [
          Object {
            "className": "games-played",
            "key": "gamesPlayed",
            "name": "Games Played",
            "short": "P",
          },
          Object {
            "className": "wins",
            "key": "wins",
            "name": "Wins",
            "short": "W",
          },
          Object {
            "className": "draws",
            "key": "draws",
            "name": "Draws",
            "short": "D",
          },
          Object {
            "className": "losses",
            "key": "losses",
            "name": "Losses",
            "short": "L",
          },
          Object {
            "className": "goals-for",
            "key": "goalsFor",
            "name": "Goals for",
            "short": "Gf",
          },
          Object {
            "className": "goals-against",
            "key": "goalsAgainst",
            "name": "Goals against",
            "short": "Ga",
          },
          Object {
            "className": "goals-difference",
            "key": "goalsDifference",
            "name": "Difference",
            "short": "+/-",
          },
          Object {
            "className": "points",
            "key": "points",
            "name": "Points",
            "short": "Pts",
          },
          Object {
            "className": "outcome",
            "key": "",
            "name": "Test BetOffer 1",
            "short": "Test BetOffer 1",
          },
          Object {
            "className": "outcome",
            "key": "",
            "name": "Test BetOffer 2",
            "short": "Test BetOffer 2",
          },
        ]
      }
      title="League Table"
    />
    <TableBody>
      <TableBodyPositionCell>
        <PositionIndicator
          change={0}
          color="LIGHT_GREEN"
          position={1}
        />
      </TableBodyPositionCell>
      <TableBodyParticipantCell
        name="FC Pęzino"
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "games-played",
            "key": "gamesPlayed",
            "name": "Games Played",
            "short": "P",
          }
        }
        value={1}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "wins",
            "key": "wins",
            "name": "Wins",
            "short": "W",
          }
        }
        value={1}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "draws",
            "key": "draws",
            "name": "Draws",
            "short": "D",
          }
        }
        value={1}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "losses",
            "key": "losses",
            "name": "Losses",
            "short": "L",
          }
        }
        value={1}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "goals-for",
            "key": "goalsFor",
            "name": "Goals for",
            "short": "Gf",
          }
        }
        value={1}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "goals-against",
            "key": "goalsAgainst",
            "name": "Goals against",
            "short": "Ga",
          }
        }
        value={1}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "goals-difference",
            "key": "goalsDifference",
            "name": "Difference",
            "short": "+/-",
          }
        }
        value={1}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "points",
            "key": "points",
            "name": "Points",
            "short": "Pts",
          }
        }
        value={1}
      />
      <TableBodyOutcomeCell>
        <OutcomeButton
          label={false}
          outcome={
            Object {
              "betOfferId": 101,
              "id": 1,
              "odds": 1001,
              "oddsAmerican": "1.1",
              "oddsFractional": "1.1",
            }
          }
        />
      </TableBodyOutcomeCell>
      <TableBodyOutcomeCell>
        <OutcomeButton
          label={false}
          outcome={
            Object {
              "betOfferId": 102,
              "id": 2,
              "odds": 1002,
              "oddsAmerican": "1.2",
              "oddsFractional": "1.2",
            }
          }
        />
      </TableBodyOutcomeCell>
      <TableBodyPositionCell>
        <PositionIndicator
          change={0}
          color="ORANGE"
          position={2}
        />
      </TableBodyPositionCell>
      <TableBodyParticipantCell
        name="Błękitni Stargard"
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "games-played",
            "key": "gamesPlayed",
            "name": "Games Played",
            "short": "P",
          }
        }
        value={2}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "wins",
            "key": "wins",
            "name": "Wins",
            "short": "W",
          }
        }
        value={2}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "draws",
            "key": "draws",
            "name": "Draws",
            "short": "D",
          }
        }
        value={2}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "losses",
            "key": "losses",
            "name": "Losses",
            "short": "L",
          }
        }
        value={2}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "goals-for",
            "key": "goalsFor",
            "name": "Goals for",
            "short": "Gf",
          }
        }
        value={2}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "goals-against",
            "key": "goalsAgainst",
            "name": "Goals against",
            "short": "Ga",
          }
        }
        value={2}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "goals-difference",
            "key": "goalsDifference",
            "name": "Difference",
            "short": "+/-",
          }
        }
        value={2}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "points",
            "key": "points",
            "name": "Points",
            "short": "Pts",
          }
        }
        value={2}
      />
      <TableBodyOutcomeCell />
      <TableBodyOutcomeCell>
        <OutcomeButton
          label={false}
          outcome={
            Object {
              "betOfferId": 104,
              "id": 4,
              "odds": 1004,
              "oddsAmerican": "1.4",
              "oddsFractional": "1.4",
            }
          }
        />
      </TableBodyOutcomeCell>
    </TableBody>
  </Table>
</div>
`;

exports[`LeagueTableWidget DOM rendering renders correctly with no data 1`] = `
<div>
  <Table>
    <TableHeadDesktop
      columns={
        Array [
          Object {
            "className": "games-played",
            "key": "gamesPlayed",
            "name": "Games Played",
            "short": "P",
          },
          Object {
            "className": "wins",
            "key": "wins",
            "name": "Wins",
            "short": "W",
          },
          Object {
            "className": "draws",
            "key": "draws",
            "name": "Draws",
            "short": "D",
          },
          Object {
            "className": "losses",
            "key": "losses",
            "name": "Losses",
            "short": "L",
          },
          Object {
            "className": "goals-for",
            "key": "goalsFor",
            "name": "Goals for",
            "short": "Gf",
          },
          Object {
            "className": "goals-against",
            "key": "goalsAgainst",
            "name": "Goals against",
            "short": "Ga",
          },
          Object {
            "className": "goals-difference",
            "key": "goalsDifference",
            "name": "Difference",
            "short": "+/-",
          },
          Object {
            "className": "points",
            "key": "points",
            "name": "Points",
            "short": "Pts",
          },
        ]
      }
      title="League Table"
    />
    <TableBody>
      
    </TableBody>
  </Table>
</div>
`;

exports[`LeagueTableWidget DOM rendering renders correctly with position legend 1`] = `
<div>
  <Table>
    <TableHeadDesktop
      columns={
        Array [
          Object {
            "className": "games-played",
            "key": "gamesPlayed",
            "name": "Games Played",
            "short": "P",
          },
          Object {
            "className": "wins",
            "key": "wins",
            "name": "Wins",
            "short": "W",
          },
          Object {
            "className": "draws",
            "key": "draws",
            "name": "Draws",
            "short": "D",
          },
          Object {
            "className": "losses",
            "key": "losses",
            "name": "Losses",
            "short": "L",
          },
          Object {
            "className": "goals-for",
            "key": "goalsFor",
            "name": "Goals for",
            "short": "Gf",
          },
          Object {
            "className": "goals-against",
            "key": "goalsAgainst",
            "name": "Goals against",
            "short": "Ga",
          },
          Object {
            "className": "goals-difference",
            "key": "goalsDifference",
            "name": "Difference",
            "short": "+/-",
          },
          Object {
            "className": "points",
            "key": "points",
            "name": "Points",
            "short": "Pts",
          },
          Object {
            "className": "outcome",
            "key": "",
            "name": "Test BetOffer 1",
            "short": "Test BetOffer 1",
          },
          Object {
            "className": "outcome",
            "key": "",
            "name": "Test BetOffer 2",
            "short": "Test BetOffer 2",
          },
        ]
      }
      title="League Table"
    />
    <TableBody>
      <TableBodyPositionCell>
        <PositionIndicator
          change={0}
          color="transparent"
          position={1}
        />
      </TableBodyPositionCell>
      <TableBodyParticipantCell
        name="FC Pęzino"
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "games-played",
            "key": "gamesPlayed",
            "name": "Games Played",
            "short": "P",
          }
        }
        value={1}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "wins",
            "key": "wins",
            "name": "Wins",
            "short": "W",
          }
        }
        value={1}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "draws",
            "key": "draws",
            "name": "Draws",
            "short": "D",
          }
        }
        value={1}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "losses",
            "key": "losses",
            "name": "Losses",
            "short": "L",
          }
        }
        value={1}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "goals-for",
            "key": "goalsFor",
            "name": "Goals for",
            "short": "Gf",
          }
        }
        value={1}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "goals-against",
            "key": "goalsAgainst",
            "name": "Goals against",
            "short": "Ga",
          }
        }
        value={1}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "goals-difference",
            "key": "goalsDifference",
            "name": "Difference",
            "short": "+/-",
          }
        }
        value={1}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "points",
            "key": "points",
            "name": "Points",
            "short": "Pts",
          }
        }
        value={1}
      />
      <TableBodyOutcomeCell>
        <OutcomeButton
          label={false}
          outcome={
            Object {
              "betOfferId": 101,
              "id": 1,
              "odds": 1001,
              "oddsAmerican": "1.1",
              "oddsFractional": "1.1",
            }
          }
        />
      </TableBodyOutcomeCell>
      <TableBodyOutcomeCell>
        <OutcomeButton
          label={false}
          outcome={
            Object {
              "betOfferId": 102,
              "id": 2,
              "odds": 1002,
              "oddsAmerican": "1.2",
              "oddsFractional": "1.2",
            }
          }
        />
      </TableBodyOutcomeCell>
      <TableBodyPositionCell>
        <PositionIndicator
          change={0}
          color="transparent"
          position={2}
        />
      </TableBodyPositionCell>
      <TableBodyParticipantCell
        name="Błękitni Stargard"
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "games-played",
            "key": "gamesPlayed",
            "name": "Games Played",
            "short": "P",
          }
        }
        value={2}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "wins",
            "key": "wins",
            "name": "Wins",
            "short": "W",
          }
        }
        value={2}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "draws",
            "key": "draws",
            "name": "Draws",
            "short": "D",
          }
        }
        value={2}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "losses",
            "key": "losses",
            "name": "Losses",
            "short": "L",
          }
        }
        value={2}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "goals-for",
            "key": "goalsFor",
            "name": "Goals for",
            "short": "Gf",
          }
        }
        value={2}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "goals-against",
            "key": "goalsAgainst",
            "name": "Goals against",
            "short": "Ga",
          }
        }
        value={2}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "goals-difference",
            "key": "goalsDifference",
            "name": "Difference",
            "short": "+/-",
          }
        }
        value={2}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "points",
            "key": "points",
            "name": "Points",
            "short": "Pts",
          }
        }
        value={2}
      />
      <TableBodyOutcomeCell />
      <TableBodyOutcomeCell>
        <OutcomeButton
          label={false}
          outcome={
            Object {
              "betOfferId": 104,
              "id": 4,
              "odds": 1004,
              "oddsAmerican": "1.4",
              "oddsFractional": "1.4",
            }
          }
        />
      </TableBodyOutcomeCell>
    </TableBody>
  </Table>
  <Legend
    items={
      Array [
        Object {
          "color": "KambiWidget-box--win",
          "description": "Test legend description",
        },
      ]
    }
  />
</div>
`;

exports[`LeagueTableWidget DOM rendering renders correctly with title extracted from event's path (0 parts) 1`] = `
<div>
  <Table>
    <TableHeadDesktop
      columns={
        Array [
          Object {
            "className": "games-played",
            "key": "gamesPlayed",
            "name": "Games Played",
            "short": "P",
          },
          Object {
            "className": "wins",
            "key": "wins",
            "name": "Wins",
            "short": "W",
          },
          Object {
            "className": "draws",
            "key": "draws",
            "name": "Draws",
            "short": "D",
          },
          Object {
            "className": "losses",
            "key": "losses",
            "name": "Losses",
            "short": "L",
          },
          Object {
            "className": "goals-for",
            "key": "goalsFor",
            "name": "Goals for",
            "short": "Gf",
          },
          Object {
            "className": "goals-against",
            "key": "goalsAgainst",
            "name": "Goals against",
            "short": "Ga",
          },
          Object {
            "className": "goals-difference",
            "key": "goalsDifference",
            "name": "Difference",
            "short": "+/-",
          },
          Object {
            "className": "points",
            "key": "points",
            "name": "Points",
            "short": "Pts",
          },
          Object {
            "className": "outcome",
            "key": "",
            "name": "Test BetOffer 1",
            "short": "Test BetOffer 1",
          },
          Object {
            "className": "outcome",
            "key": "",
            "name": "Test BetOffer 2",
            "short": "Test BetOffer 2",
          },
        ]
      }
      title="League Table"
    />
    <TableBody>
      <TableBodyPositionCell>
        <PositionIndicator
          change={0}
          color="transparent"
          position={1}
        />
      </TableBodyPositionCell>
      <TableBodyParticipantCell
        name="FC Pęzino"
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "games-played",
            "key": "gamesPlayed",
            "name": "Games Played",
            "short": "P",
          }
        }
        value={1}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "wins",
            "key": "wins",
            "name": "Wins",
            "short": "W",
          }
        }
        value={1}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "draws",
            "key": "draws",
            "name": "Draws",
            "short": "D",
          }
        }
        value={1}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "losses",
            "key": "losses",
            "name": "Losses",
            "short": "L",
          }
        }
        value={1}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "goals-for",
            "key": "goalsFor",
            "name": "Goals for",
            "short": "Gf",
          }
        }
        value={1}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "goals-against",
            "key": "goalsAgainst",
            "name": "Goals against",
            "short": "Ga",
          }
        }
        value={1}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "goals-difference",
            "key": "goalsDifference",
            "name": "Difference",
            "short": "+/-",
          }
        }
        value={1}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "points",
            "key": "points",
            "name": "Points",
            "short": "Pts",
          }
        }
        value={1}
      />
      <TableBodyOutcomeCell>
        <OutcomeButton
          label={false}
          outcome={
            Object {
              "betOfferId": 101,
              "id": 1,
              "odds": 1001,
              "oddsAmerican": "1.1",
              "oddsFractional": "1.1",
            }
          }
        />
      </TableBodyOutcomeCell>
      <TableBodyOutcomeCell>
        <OutcomeButton
          label={false}
          outcome={
            Object {
              "betOfferId": 102,
              "id": 2,
              "odds": 1002,
              "oddsAmerican": "1.2",
              "oddsFractional": "1.2",
            }
          }
        />
      </TableBodyOutcomeCell>
      <TableBodyPositionCell>
        <PositionIndicator
          change={0}
          color="transparent"
          position={2}
        />
      </TableBodyPositionCell>
      <TableBodyParticipantCell
        name="Błękitni Stargard"
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "games-played",
            "key": "gamesPlayed",
            "name": "Games Played",
            "short": "P",
          }
        }
        value={2}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "wins",
            "key": "wins",
            "name": "Wins",
            "short": "W",
          }
        }
        value={2}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "draws",
            "key": "draws",
            "name": "Draws",
            "short": "D",
          }
        }
        value={2}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "losses",
            "key": "losses",
            "name": "Losses",
            "short": "L",
          }
        }
        value={2}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "goals-for",
            "key": "goalsFor",
            "name": "Goals for",
            "short": "Gf",
          }
        }
        value={2}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "goals-against",
            "key": "goalsAgainst",
            "name": "Goals against",
            "short": "Ga",
          }
        }
        value={2}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "goals-difference",
            "key": "goalsDifference",
            "name": "Difference",
            "short": "+/-",
          }
        }
        value={2}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "points",
            "key": "points",
            "name": "Points",
            "short": "Pts",
          }
        }
        value={2}
      />
      <TableBodyOutcomeCell />
      <TableBodyOutcomeCell>
        <OutcomeButton
          label={false}
          outcome={
            Object {
              "betOfferId": 104,
              "id": 4,
              "odds": 1004,
              "oddsAmerican": "1.4",
              "oddsFractional": "1.4",
            }
          }
        />
      </TableBodyOutcomeCell>
    </TableBody>
  </Table>
</div>
`;

exports[`LeagueTableWidget DOM rendering renders correctly with title extracted from event's path (2 parts) 1`] = `
<div>
  <Table>
    <TableHeadDesktop
      columns={
        Array [
          Object {
            "className": "games-played",
            "key": "gamesPlayed",
            "name": "Games Played",
            "short": "P",
          },
          Object {
            "className": "wins",
            "key": "wins",
            "name": "Wins",
            "short": "W",
          },
          Object {
            "className": "draws",
            "key": "draws",
            "name": "Draws",
            "short": "D",
          },
          Object {
            "className": "losses",
            "key": "losses",
            "name": "Losses",
            "short": "L",
          },
          Object {
            "className": "goals-for",
            "key": "goalsFor",
            "name": "Goals for",
            "short": "Gf",
          },
          Object {
            "className": "goals-against",
            "key": "goalsAgainst",
            "name": "Goals against",
            "short": "Ga",
          },
          Object {
            "className": "goals-difference",
            "key": "goalsDifference",
            "name": "Difference",
            "short": "+/-",
          },
          Object {
            "className": "points",
            "key": "points",
            "name": "Points",
            "short": "Pts",
          },
          Object {
            "className": "outcome",
            "key": "",
            "name": "Test BetOffer 1",
            "short": "Test BetOffer 1",
          },
          Object {
            "className": "outcome",
            "key": "",
            "name": "Test BetOffer 2",
            "short": "Test BetOffer 2",
          },
        ]
      }
      title="League Table"
    />
    <TableBody>
      <TableBodyPositionCell>
        <PositionIndicator
          change={0}
          color="transparent"
          position={1}
        />
      </TableBodyPositionCell>
      <TableBodyParticipantCell
        name="FC Pęzino"
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "games-played",
            "key": "gamesPlayed",
            "name": "Games Played",
            "short": "P",
          }
        }
        value={1}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "wins",
            "key": "wins",
            "name": "Wins",
            "short": "W",
          }
        }
        value={1}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "draws",
            "key": "draws",
            "name": "Draws",
            "short": "D",
          }
        }
        value={1}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "losses",
            "key": "losses",
            "name": "Losses",
            "short": "L",
          }
        }
        value={1}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "goals-for",
            "key": "goalsFor",
            "name": "Goals for",
            "short": "Gf",
          }
        }
        value={1}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "goals-against",
            "key": "goalsAgainst",
            "name": "Goals against",
            "short": "Ga",
          }
        }
        value={1}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "goals-difference",
            "key": "goalsDifference",
            "name": "Difference",
            "short": "+/-",
          }
        }
        value={1}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "points",
            "key": "points",
            "name": "Points",
            "short": "Pts",
          }
        }
        value={1}
      />
      <TableBodyOutcomeCell>
        <OutcomeButton
          label={false}
          outcome={
            Object {
              "betOfferId": 101,
              "id": 1,
              "odds": 1001,
              "oddsAmerican": "1.1",
              "oddsFractional": "1.1",
            }
          }
        />
      </TableBodyOutcomeCell>
      <TableBodyOutcomeCell>
        <OutcomeButton
          label={false}
          outcome={
            Object {
              "betOfferId": 102,
              "id": 2,
              "odds": 1002,
              "oddsAmerican": "1.2",
              "oddsFractional": "1.2",
            }
          }
        />
      </TableBodyOutcomeCell>
      <TableBodyPositionCell>
        <PositionIndicator
          change={0}
          color="transparent"
          position={2}
        />
      </TableBodyPositionCell>
      <TableBodyParticipantCell
        name="Błękitni Stargard"
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "games-played",
            "key": "gamesPlayed",
            "name": "Games Played",
            "short": "P",
          }
        }
        value={2}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "wins",
            "key": "wins",
            "name": "Wins",
            "short": "W",
          }
        }
        value={2}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "draws",
            "key": "draws",
            "name": "Draws",
            "short": "D",
          }
        }
        value={2}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "losses",
            "key": "losses",
            "name": "Losses",
            "short": "L",
          }
        }
        value={2}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "goals-for",
            "key": "goalsFor",
            "name": "Goals for",
            "short": "Gf",
          }
        }
        value={2}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "goals-against",
            "key": "goalsAgainst",
            "name": "Goals against",
            "short": "Ga",
          }
        }
        value={2}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "goals-difference",
            "key": "goalsDifference",
            "name": "Difference",
            "short": "+/-",
          }
        }
        value={2}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "points",
            "key": "points",
            "name": "Points",
            "short": "Pts",
          }
        }
        value={2}
      />
      <TableBodyOutcomeCell />
      <TableBodyOutcomeCell>
        <OutcomeButton
          label={false}
          outcome={
            Object {
              "betOfferId": 104,
              "id": 4,
              "odds": 1004,
              "oddsAmerican": "1.4",
              "oddsFractional": "1.4",
            }
          }
        />
      </TableBodyOutcomeCell>
    </TableBody>
  </Table>
</div>
`;

exports[`LeagueTableWidget DOM rendering renders correctly with title extracted from event's path (3 parts) 1`] = `
<div>
  <Table>
    <TableHeadDesktop
      columns={
        Array [
          Object {
            "className": "games-played",
            "key": "gamesPlayed",
            "name": "Games Played",
            "short": "P",
          },
          Object {
            "className": "wins",
            "key": "wins",
            "name": "Wins",
            "short": "W",
          },
          Object {
            "className": "draws",
            "key": "draws",
            "name": "Draws",
            "short": "D",
          },
          Object {
            "className": "losses",
            "key": "losses",
            "name": "Losses",
            "short": "L",
          },
          Object {
            "className": "goals-for",
            "key": "goalsFor",
            "name": "Goals for",
            "short": "Gf",
          },
          Object {
            "className": "goals-against",
            "key": "goalsAgainst",
            "name": "Goals against",
            "short": "Ga",
          },
          Object {
            "className": "goals-difference",
            "key": "goalsDifference",
            "name": "Difference",
            "short": "+/-",
          },
          Object {
            "className": "points",
            "key": "points",
            "name": "Points",
            "short": "Pts",
          },
          Object {
            "className": "outcome",
            "key": "",
            "name": "Test BetOffer 1",
            "short": "Test BetOffer 1",
          },
          Object {
            "className": "outcome",
            "key": "",
            "name": "Test BetOffer 2",
            "short": "Test BetOffer 2",
          },
        ]
      }
      title="League Table"
    />
    <TableBody>
      <TableBodyPositionCell>
        <PositionIndicator
          change={0}
          color="transparent"
          position={1}
        />
      </TableBodyPositionCell>
      <TableBodyParticipantCell
        name="FC Pęzino"
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "games-played",
            "key": "gamesPlayed",
            "name": "Games Played",
            "short": "P",
          }
        }
        value={1}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "wins",
            "key": "wins",
            "name": "Wins",
            "short": "W",
          }
        }
        value={1}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "draws",
            "key": "draws",
            "name": "Draws",
            "short": "D",
          }
        }
        value={1}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "losses",
            "key": "losses",
            "name": "Losses",
            "short": "L",
          }
        }
        value={1}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "goals-for",
            "key": "goalsFor",
            "name": "Goals for",
            "short": "Gf",
          }
        }
        value={1}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "goals-against",
            "key": "goalsAgainst",
            "name": "Goals against",
            "short": "Ga",
          }
        }
        value={1}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "goals-difference",
            "key": "goalsDifference",
            "name": "Difference",
            "short": "+/-",
          }
        }
        value={1}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "points",
            "key": "points",
            "name": "Points",
            "short": "Pts",
          }
        }
        value={1}
      />
      <TableBodyOutcomeCell>
        <OutcomeButton
          label={false}
          outcome={
            Object {
              "betOfferId": 101,
              "id": 1,
              "odds": 1001,
              "oddsAmerican": "1.1",
              "oddsFractional": "1.1",
            }
          }
        />
      </TableBodyOutcomeCell>
      <TableBodyOutcomeCell>
        <OutcomeButton
          label={false}
          outcome={
            Object {
              "betOfferId": 102,
              "id": 2,
              "odds": 1002,
              "oddsAmerican": "1.2",
              "oddsFractional": "1.2",
            }
          }
        />
      </TableBodyOutcomeCell>
      <TableBodyPositionCell>
        <PositionIndicator
          change={0}
          color="transparent"
          position={2}
        />
      </TableBodyPositionCell>
      <TableBodyParticipantCell
        name="Błękitni Stargard"
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "games-played",
            "key": "gamesPlayed",
            "name": "Games Played",
            "short": "P",
          }
        }
        value={2}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "wins",
            "key": "wins",
            "name": "Wins",
            "short": "W",
          }
        }
        value={2}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "draws",
            "key": "draws",
            "name": "Draws",
            "short": "D",
          }
        }
        value={2}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "losses",
            "key": "losses",
            "name": "Losses",
            "short": "L",
          }
        }
        value={2}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "goals-for",
            "key": "goalsFor",
            "name": "Goals for",
            "short": "Gf",
          }
        }
        value={2}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "goals-against",
            "key": "goalsAgainst",
            "name": "Goals against",
            "short": "Ga",
          }
        }
        value={2}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "goals-difference",
            "key": "goalsDifference",
            "name": "Difference",
            "short": "+/-",
          }
        }
        value={2}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "points",
            "key": "points",
            "name": "Points",
            "short": "Pts",
          }
        }
        value={2}
      />
      <TableBodyOutcomeCell />
      <TableBodyOutcomeCell>
        <OutcomeButton
          label={false}
          outcome={
            Object {
              "betOfferId": 104,
              "id": 4,
              "odds": 1004,
              "oddsAmerican": "1.4",
              "oddsFractional": "1.4",
            }
          }
        />
      </TableBodyOutcomeCell>
    </TableBody>
  </Table>
</div>
`;

exports[`LeagueTableWidget DOM rendering renders correctly without bet offers 1`] = `
<div>
  <Table>
    <TableHeadDesktop
      columns={
        Array [
          Object {
            "className": "games-played",
            "key": "gamesPlayed",
            "name": "Games Played",
            "short": "P",
          },
          Object {
            "className": "wins",
            "key": "wins",
            "name": "Wins",
            "short": "W",
          },
          Object {
            "className": "draws",
            "key": "draws",
            "name": "Draws",
            "short": "D",
          },
          Object {
            "className": "losses",
            "key": "losses",
            "name": "Losses",
            "short": "L",
          },
          Object {
            "className": "goals-for",
            "key": "goalsFor",
            "name": "Goals for",
            "short": "Gf",
          },
          Object {
            "className": "goals-against",
            "key": "goalsAgainst",
            "name": "Goals against",
            "short": "Ga",
          },
          Object {
            "className": "goals-difference",
            "key": "goalsDifference",
            "name": "Difference",
            "short": "+/-",
          },
          Object {
            "className": "points",
            "key": "points",
            "name": "Points",
            "short": "Pts",
          },
        ]
      }
      title="League Table"
    />
    <TableBody>
      <TableBodyPositionCell>
        <PositionIndicator
          change={0}
          color="transparent"
          position={1}
        />
      </TableBodyPositionCell>
      <TableBodyParticipantCell
        name="FC Pęzino"
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "games-played",
            "key": "gamesPlayed",
            "name": "Games Played",
            "short": "P",
          }
        }
        value={1}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "wins",
            "key": "wins",
            "name": "Wins",
            "short": "W",
          }
        }
        value={1}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "draws",
            "key": "draws",
            "name": "Draws",
            "short": "D",
          }
        }
        value={1}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "losses",
            "key": "losses",
            "name": "Losses",
            "short": "L",
          }
        }
        value={1}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "goals-for",
            "key": "goalsFor",
            "name": "Goals for",
            "short": "Gf",
          }
        }
        value={1}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "goals-against",
            "key": "goalsAgainst",
            "name": "Goals against",
            "short": "Ga",
          }
        }
        value={1}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "goals-difference",
            "key": "goalsDifference",
            "name": "Difference",
            "short": "+/-",
          }
        }
        value={1}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "points",
            "key": "points",
            "name": "Points",
            "short": "Pts",
          }
        }
        value={1}
      />
      <TableBodyOutcomeCell>
        <OutcomeButton
          label={false}
          outcome={
            Object {
              "betOfferId": 101,
              "id": 1,
              "odds": 1001,
              "oddsAmerican": "1.1",
              "oddsFractional": "1.1",
            }
          }
        />
      </TableBodyOutcomeCell>
      <TableBodyOutcomeCell>
        <OutcomeButton
          label={false}
          outcome={
            Object {
              "betOfferId": 102,
              "id": 2,
              "odds": 1002,
              "oddsAmerican": "1.2",
              "oddsFractional": "1.2",
            }
          }
        />
      </TableBodyOutcomeCell>
      <TableBodyPositionCell>
        <PositionIndicator
          change={0}
          color="transparent"
          position={2}
        />
      </TableBodyPositionCell>
      <TableBodyParticipantCell
        name="Błękitni Stargard"
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "games-played",
            "key": "gamesPlayed",
            "name": "Games Played",
            "short": "P",
          }
        }
        value={2}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "wins",
            "key": "wins",
            "name": "Wins",
            "short": "W",
          }
        }
        value={2}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "draws",
            "key": "draws",
            "name": "Draws",
            "short": "D",
          }
        }
        value={2}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "losses",
            "key": "losses",
            "name": "Losses",
            "short": "L",
          }
        }
        value={2}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "goals-for",
            "key": "goalsFor",
            "name": "Goals for",
            "short": "Gf",
          }
        }
        value={2}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "goals-against",
            "key": "goalsAgainst",
            "name": "Goals against",
            "short": "Ga",
          }
        }
        value={2}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "goals-difference",
            "key": "goalsDifference",
            "name": "Difference",
            "short": "+/-",
          }
        }
        value={2}
      />
      <TableBodyStatsCell
        column={
          Object {
            "className": "points",
            "key": "points",
            "name": "Points",
            "short": "Pts",
          }
        }
        value={2}
      />
      <TableBodyOutcomeCell />
      <TableBodyOutcomeCell>
        <OutcomeButton
          label={false}
          outcome={
            Object {
              "betOfferId": 104,
              "id": 4,
              "odds": 1004,
              "oddsAmerican": "1.4",
              "oddsFractional": "1.4",
            }
          }
        />
      </TableBodyOutcomeCell>
    </TableBody>
  </Table>
</div>
`;

exports[`LeagueTableWidget interface handles columns group change events correctly 1`] = `
"<LeagueTableWidget statistics={{...}} betOffers={{...}} title=\\"League Table\\" positionLegend={{...}} positionColorMatcher={[Function]}>
  <div>
    <Table>
      <table className=\\"KambiWidget-card-background-color general\\">
        <TableHeadMobile title=\\"League Table\\" showColumnPicker={true} columnGroups={{...}} initialColumnGroupIdx={0} onColumnGroupChanged={[Function]}>
          <thead>
            <tr className=\\"KambiWidget-card-header-border KambiWidget-secondary-header KambiWidget-card-support-text-color mobile-row\\">
              <th colSpan=\\"2\\" className=\\"title\\">
                League Table
              </th>
              <th colSpan={6} className=\\"column-picker\\">
                <DropdownButton options={{...}} selected={0} onChange={[Function]} horizontalAlignment=\\"right\\" verticalAlignment=\\"top\\">
                  <div className=\\"general\\">
                    <button className=\\"KambiWidget-card-support-text-color button\\" onClick={[Function]}>
                      Translated: \\"Statistics\\"
                      <i />
                    </button>
                    <ul style={{...}} className=\\"dropDown  rightAlign topAlign\\">
                      <li data-kw-dropdown-button-index={0} className=\\"KambiWidget-card-background-color KambiWidget-card-background-color--hoverable KambiWidget-card-background-color--clickable KambiWidget-primary-color\\">
                        Translated: &quot;Statistics&quot;
                      </li>
                      <li data-kw-dropdown-button-index={1} className=\\"KambiWidget-card-background-color KambiWidget-card-background-color--hoverable KambiWidget-card-background-color--clickable KambiWidget-card-text-color\\">
                        Translated: &quot;Bet offers&quot;
                      </li>
                    </ul>
                  </div>
                </DropdownButton>
              </th>
              <th className=\\"margin\\" />
            </tr>
            <TableHeadDefaultRow columns={{...}} title=\\"\\" hiddenMode={false}>
              <tr className=\\"KambiWidget-card-header-border KambiWidget-secondary-header KambiWidget-card-support-text-color general\\">
                <th colSpan=\\"2\\" className=\\"title\\" />
                <th className=\\"column-name\\" title=\\"Translated: \\"Games Played\\"\\">
                  P
                </th>
                <th className=\\"column-name\\" title=\\"Translated: \\"Wins\\"\\">
                  W
                </th>
                <th className=\\"column-name\\" title=\\"Translated: \\"Draws\\"\\">
                  D
                </th>
                <th className=\\"column-name\\" title=\\"Translated: \\"Losses\\"\\">
                  L
                </th>
                <th className=\\"column-name\\" title=\\"Translated: \\"Difference\\"\\">
                  +/-
                </th>
                <th className=\\"column-name\\" title=\\"Translated: \\"Points\\"\\">
                  Pts
                </th>
                <th className=\\"margin\\" />
              </tr>
            </TableHeadDefaultRow>
          </thead>
        </TableHeadMobile>
        <TableBody>
          <tbody>
            <tr className=\\"KambiWidget-card-inner-border row\\">
              <TableBodyPositionCell>
                <td className=\\"general\\" title=\\"Translated: \\"Position\\"\\">
                  <PositionIndicator position={1} color=\\"transparent\\" change={0}>
                    <span>
                      <PositionCircle color=\\"transparent\\">
                        <span className=\\"wrapper no-circle\\">
                          <span className=\\"circle transparent\\">
                            1
                          </span>
                        </span>
                      </PositionCircle>
                    </span>
                  </PositionIndicator>
                </td>
              </TableBodyPositionCell>
              <TableBodyParticipantCell name=\\"FC Pęzino\\">
                <td className=\\"general\\" title=\\"Translated: \\"Participant name\\"\\">
                  FC Pęzino
                </td>
              </TableBodyParticipantCell>
              <TableBodyStatsCell column={{...}} value={1}>
                <td title=\\"Translated: \\"Games Played\\"\\" className=\\"general games-played\\">
                  1
                </td>
              </TableBodyStatsCell>
              <TableBodyStatsCell column={{...}} value={1}>
                <td title=\\"Translated: \\"Wins\\"\\" className=\\"general wins\\">
                  1
                </td>
              </TableBodyStatsCell>
              <TableBodyStatsCell column={{...}} value={1}>
                <td title=\\"Translated: \\"Draws\\"\\" className=\\"general draws\\">
                  1
                </td>
              </TableBodyStatsCell>
              <TableBodyStatsCell column={{...}} value={1}>
                <td title=\\"Translated: \\"Losses\\"\\" className=\\"general losses\\">
                  1
                </td>
              </TableBodyStatsCell>
              <TableBodyStatsCell column={{...}} value={1}>
                <td title=\\"Translated: \\"Difference\\"\\" className=\\"general goals-difference\\">
                  1
                </td>
              </TableBodyStatsCell>
              <TableBodyStatsCell column={{...}} value={1}>
                <td title=\\"Translated: \\"Points\\"\\" className=\\"general points\\">
                  1
                </td>
              </TableBodyStatsCell>
              <td className=\\"margin\\" />
            </tr>
            <tr className=\\"KambiWidget-card-inner-border row\\">
              <TableBodyPositionCell>
                <td className=\\"general\\" title=\\"Translated: \\"Position\\"\\">
                  <PositionIndicator position={2} color=\\"transparent\\" change={0}>
                    <span>
                      <PositionCircle color=\\"transparent\\">
                        <span className=\\"wrapper no-circle\\">
                          <span className=\\"circle transparent\\">
                            2
                          </span>
                        </span>
                      </PositionCircle>
                    </span>
                  </PositionIndicator>
                </td>
              </TableBodyPositionCell>
              <TableBodyParticipantCell name=\\"Błękitni Stargard\\">
                <td className=\\"general\\" title=\\"Translated: \\"Participant name\\"\\">
                  Błękitni Stargard
                </td>
              </TableBodyParticipantCell>
              <TableBodyStatsCell column={{...}} value={2}>
                <td title=\\"Translated: \\"Games Played\\"\\" className=\\"general games-played\\">
                  2
                </td>
              </TableBodyStatsCell>
              <TableBodyStatsCell column={{...}} value={2}>
                <td title=\\"Translated: \\"Wins\\"\\" className=\\"general wins\\">
                  2
                </td>
              </TableBodyStatsCell>
              <TableBodyStatsCell column={{...}} value={2}>
                <td title=\\"Translated: \\"Draws\\"\\" className=\\"general draws\\">
                  2
                </td>
              </TableBodyStatsCell>
              <TableBodyStatsCell column={{...}} value={2}>
                <td title=\\"Translated: \\"Losses\\"\\" className=\\"general losses\\">
                  2
                </td>
              </TableBodyStatsCell>
              <TableBodyStatsCell column={{...}} value={2}>
                <td title=\\"Translated: \\"Difference\\"\\" className=\\"general goals-difference\\">
                  2
                </td>
              </TableBodyStatsCell>
              <TableBodyStatsCell column={{...}} value={2}>
                <td title=\\"Translated: \\"Points\\"\\" className=\\"general points\\">
                  2
                </td>
              </TableBodyStatsCell>
              <td className=\\"margin\\" />
            </tr>
          </tbody>
        </TableBody>
      </table>
    </Table>
  </div>
</LeagueTableWidget>"
`;

exports[`LeagueTableWidget interface handles columns group change events correctly 2`] = `
"<LeagueTableWidget statistics={{...}} betOffers={{...}} title=\\"League Table\\" positionLegend={{...}} positionColorMatcher={[Function]}>
  <div>
    <Table>
      <table className=\\"KambiWidget-card-background-color general\\">
        <TableHeadMobile title=\\"League Table\\" showColumnPicker={true} columnGroups={{...}} initialColumnGroupIdx={1} onColumnGroupChanged={[Function]}>
          <thead>
            <tr className=\\"KambiWidget-card-header-border KambiWidget-secondary-header KambiWidget-card-support-text-color mobile-row\\">
              <th colSpan=\\"2\\" className=\\"title\\">
                League Table
              </th>
              <th colSpan={2} className=\\"column-picker\\">
                <DropdownButton options={{...}} selected={1} onChange={[Function]} horizontalAlignment=\\"right\\" verticalAlignment=\\"top\\">
                  <div className=\\"general\\">
                    <button className=\\"KambiWidget-card-support-text-color button\\" onClick={[Function]}>
                      Translated: \\"Bet offers\\"
                      <i />
                    </button>
                  </div>
                </DropdownButton>
              </th>
              <th className=\\"margin\\" />
            </tr>
            <TableHeadDefaultRow columns={{...}} title=\\"\\" hiddenMode={false}>
              <tr className=\\"KambiWidget-card-header-border KambiWidget-secondary-header KambiWidget-card-support-text-color general\\">
                <th colSpan=\\"2\\" className=\\"title\\" />
                <th className=\\"column-name\\" title=\\"Translated: \\"Test BetOffer 1\\"\\">
                  Test BetOffer 1
                </th>
                <th className=\\"column-name\\" title=\\"Translated: \\"Test BetOffer 2\\"\\">
                  Test BetOffer 2
                </th>
                <th className=\\"margin\\" />
              </tr>
            </TableHeadDefaultRow>
          </thead>
        </TableHeadMobile>
        <TableBody>
          <tbody>
            <tr className=\\"KambiWidget-card-inner-border row\\">
              <TableBodyPositionCell>
                <td className=\\"general\\" title=\\"Translated: \\"Position\\"\\">
                  <PositionIndicator position={1} color=\\"transparent\\" change={0}>
                    <span>
                      <PositionCircle color=\\"transparent\\">
                        <span className=\\"wrapper no-circle\\">
                          <span className=\\"circle transparent\\">
                            1
                          </span>
                        </span>
                      </PositionCircle>
                    </span>
                  </PositionIndicator>
                </td>
              </TableBodyPositionCell>
              <TableBodyParticipantCell name=\\"FC Pęzino\\">
                <td className=\\"general\\" title=\\"Translated: \\"Participant name\\"\\">
                  FC Pęzino
                </td>
              </TableBodyParticipantCell>
              <TableBodyOutcomeCell>
                <td className=\\"general\\">
                  <div className=\\"wrapper\\">
                    <OutcomeButton outcome={{...}} label={false}>
                      <OutcomeButtonUI label={{...}} odds=\\"1.0\\" suspended={false} selected={false} onClick={[Function]}>
                        <button type=\\"button\\" role=\\"button\\" className=\\"l-flex-1 kw-link KambiWidget-outcome general\\" disabled={false} onClick={[Function]}>
                          <div className=\\"KambiWidget-outcome__odds-wrapper\\">
                            <span className=\\"KambiWidget-outcome__odds\\">
                              1.0
                            </span>
                          </div>
                        </button>
                      </OutcomeButtonUI>
                    </OutcomeButton>
                  </div>
                </td>
              </TableBodyOutcomeCell>
              <TableBodyOutcomeCell>
                <td className=\\"general\\">
                  <div className=\\"wrapper\\">
                    <OutcomeButton outcome={{...}} label={false}>
                      <OutcomeButtonUI label={{...}} odds=\\"1.0\\" suspended={false} selected={false} onClick={[Function]}>
                        <button type=\\"button\\" role=\\"button\\" className=\\"l-flex-1 kw-link KambiWidget-outcome general\\" disabled={false} onClick={[Function]}>
                          <div className=\\"KambiWidget-outcome__odds-wrapper\\">
                            <span className=\\"KambiWidget-outcome__odds\\">
                              1.0
                            </span>
                          </div>
                        </button>
                      </OutcomeButtonUI>
                    </OutcomeButton>
                  </div>
                </td>
              </TableBodyOutcomeCell>
              <td className=\\"margin\\" />
            </tr>
            <tr className=\\"KambiWidget-card-inner-border row\\">
              <TableBodyPositionCell>
                <td className=\\"general\\" title=\\"Translated: \\"Position\\"\\">
                  <PositionIndicator position={2} color=\\"transparent\\" change={0}>
                    <span>
                      <PositionCircle color=\\"transparent\\">
                        <span className=\\"wrapper no-circle\\">
                          <span className=\\"circle transparent\\">
                            2
                          </span>
                        </span>
                      </PositionCircle>
                    </span>
                  </PositionIndicator>
                </td>
              </TableBodyPositionCell>
              <TableBodyParticipantCell name=\\"Błękitni Stargard\\">
                <td className=\\"general\\" title=\\"Translated: \\"Participant name\\"\\">
                  Błękitni Stargard
                </td>
              </TableBodyParticipantCell>
              <TableBodyOutcomeCell>
                <td className=\\"general\\">
                  <div className=\\"wrapper\\" />
                </td>
              </TableBodyOutcomeCell>
              <TableBodyOutcomeCell>
                <td className=\\"general\\">
                  <div className=\\"wrapper\\">
                    <OutcomeButton outcome={{...}} label={false}>
                      <OutcomeButtonUI label={{...}} odds=\\"1.0\\" suspended={false} selected={false} onClick={[Function]}>
                        <button type=\\"button\\" role=\\"button\\" className=\\"l-flex-1 kw-link KambiWidget-outcome general\\" disabled={false} onClick={[Function]}>
                          <div className=\\"KambiWidget-outcome__odds-wrapper\\">
                            <span className=\\"KambiWidget-outcome__odds\\">
                              1.0
                            </span>
                          </div>
                        </button>
                      </OutcomeButtonUI>
                    </OutcomeButton>
                  </div>
                </td>
              </TableBodyOutcomeCell>
              <td className=\\"margin\\" />
            </tr>
          </tbody>
        </TableBody>
      </table>
    </Table>
  </div>
</LeagueTableWidget>"
`;
